--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Around Egypt</string>
+    <string name="no_internet_connection">No Internet Connection</string>
+    <string name="around_egypt">Around Egypt</string>
+    <string name="background">Background</string>
+
 </resources>
