--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="no_internet_connection">No Internet Connection</string>
     <string name="around_egypt">Around Egypt</string>
     <string name="background">Background</string>
+    <string name="welcome_description">Now you can explore any experience in 360 degrees and get all the details about it all in one place.</string>
+    <string name="welcome">Welcome!</string>
 
 </resources>
